[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/enemigos/vaquero 2.png" type="Texture" id=1]
[ext_resource path="res://scenes/Area2D.gd" type="Script" id=2]
[ext_resource path="res://scenes/Enemy.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.0302, 79.7158 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Colision" type="CollisionShape2D" parent="."]
position = Vector2( -7.48734, -3.54842 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Area2D"]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )

[node name="ColisionDelArea" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -5.38211, -3.54841 )
shape = SubResource( 1 )

[node name="EnemyTween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="DeleteThis" type="Timer" parent="."]
wait_time = 4.0
autostart = true
[connection signal="input_event" from="Area2D" to="Area2D" method="_on_Area2D_input_event"]
[connection signal="tween_completed" from="EnemyTween" to="." method="_on_EnemyTween_tween_completed"]
[connection signal="timeout" from="Timer" to="Area2D" method="_on_Timer_timeout"]
[connection signal="timeout" from="DeleteThis" to="." method="_on_DeleteThis_timeout"]
